Closed Bug 1935858 Opened 1 year ago Closed 1 year ago

GtkFileChooser doesn't preview images bigger than 4096px

Categories

(Core :: Widget: Gtk, defect)

Firefox 133
Desktop
Linux
defect

Tracking

()

RESOLVED FIXED
135 Branch
Tracking Status
firefox135 --- fixed

People

(Reporter: ltning-mozilla, Assigned: stransky)

Details

Attachments

(1 file)

Re-creating this bug as the reason for not fixing it is ... not logical.

Images from e.g. mobile phones or cameras are larger now than when this bug was originally reported, and certainly larger than when this seemingly arbitrary limit was decided upon. The usability impact of this limit is thus growing more and more. Doing selective uploads of perfectly standard images coming directly from consumer devices has become difficult. Any of the suggested workarounds (resizing images, etc.) are, frankly, unacceptable asks. This limit does not seem to be present on any other platform or relevant browser.

If there are bugs in GTK/GDK related to this, it's not like those are dead projects that won't accept bug reports. And the same argument could be used about literally every other platform where Firefox relies on external components to provide the file dialog.

My 2 cents.
/Eirik

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:68.0) Gecko/20100101 Firefox/68.0

Steps to reproduce:

I tried to upload an 4920 x 3264 .jpg photo via Firefox.

Actual results:

The GtkFileChooser instance spawned by Firefox refuses to preview images bigger than 4096 pixels (mitigation for bug 1184009).

Expected results:

The preview should be generated. As gdk-pixbuf is most probably fixed by now the limit could be increased or removed altogether.

Assignee: nobody → stransky
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/b62b25314428 [Linux] Allow GtkFileChooser to get preview of 8K images r=emilio
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 135 Branch
Flags: qe-verify+

I could not reproduce this issue by uploading a large image on Ubuntu 22 using FF build 135.0a1.
ltning-mozilla@anduin.net can you please try and confirm the fix on latest Firefox build on nightly and Beta? Thank you.

Flags: needinfo?(ltning-mozilla)

(In reply to Monica Chiorean from comment #4)

I could not reproduce this issue by uploading a large image on Ubuntu 22 using FF build 135.0a1.
ltning-mozilla@anduin.net can you please try and confirm the fix on latest Firefox build on nightly and Beta? Thank you.

I'm not able to test this on short notice since I'm on FreeBSD and rely on the FreeBSD port for this. I can reach out to the port maintainer to ask if they can try to update it (there are a fair number of local patches that may need adjusting), but I'm not confident this can be done before the release of 135.

/Eirik

Flags: needinfo?(ltning-mozilla)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: