Bug 1935858 [Linux] Allow GtkFileChooser to get preview of 8K images r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D231506